# ufma-fintech

./: .gitignore  README.md  main.py  pyproject.toml
credito/: __init__.py  analise_risco.py  cliente.py  proposta.py  regras_credito.py  repositorio_clientes.py  resultado.py  terminal.py
data/: clientes_teste.json
lispworks/: credito_bancario.lisp  fatos_credito.lisp  interface_credito.lisp  package.lisp  regras_credito.lisp
prolog/: credito_bancario.pl  fatos_credito.pl  interface_credito.pl  regras_credito.pl
src/: main.py
src/credit/domain/: __init__.py  cliente_domain.py  proposta_domain.py  resultado_domain.py
src/credit/presentation/: __init__.py  terminal_presentation.py
src/credit/repositories/: __init__.py  clientes_repository.py
src/credit/services/: __init__.py  analise_service.py  regras_service.py
src/tests/: test_aprovacao.py  test_juros.py  test_limite.py  test_regras_credito.py  test_reprovacao.py
tests/: test_aprovacao.py  test_juros.py  test_limite.py  test_regras_credito.py  test_reprovacao.py
